--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "author": "Freddy Ramirez",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.1",
     "nodemon": "^2.0.20"
   }
