--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "avilatek-backend",
+  "name": "backend-login",
   "version": "1.0.0",
   "description": "Test tecnica para desarrollador backend",
   "main": "index.js",
